tests/baselines/reference/assertInWrapSomeTypeParameter.errors.txt
assertInWrapSomeTypeParameter.ts(2,26): error TS1005: '>' expected.


==== assertInWrapSomeTypeParameter.ts (1 errors) ====
    class C<T extends C<T>> {
        foo<U extends C<C<T>>(x: U) {
                             ~
!!! error TS1005: '>' expected.
            return null;
        }
    }